# object_detection

./: .gitignore  LICENSE  README.md  run.ipynb  run_on_colab.ipynb  setup.cfg
configs/fcos/: fcos_512_r50_voc_aug.py
configs/retinanet/: retinanet_416_r50_voc_aug.py  retinanet_512_r50_voc_aug.py  retinanet_r50_voc_aug.py
configs/ssd/: ssd2_resnext50_voc_aug.py  ssd300_vgg16_voc_aug.py  ssd300_vgg16bn_voc_aug.py  ssd512_vgg16_voc_aug.py  ssd512_vgg16bn_voc_aug.py  ssd_300_vgg16_voc_aug.py  ssd_300_vgg16bn_voc_aug.py  ssd_512_vgg16_voc_aug.py  ssd_512_vgg16bn_voc_aug.py  ssd_vgg16bn_voc_aug.py  ssd_vgg16bn_voc_aug_colab.py  ssd_vgg16bn_voc_aug_strong.py
configs/yolov3/: yolov3_416_voc_aug.py  yolov3_voc_aug.py
src/: test.py  train.py
src/datasets/: __init__.py  aug_albu.py  augmentation.py  dataset.py  metadata.py  pipeline.py  transform.py
src/datautils/: __init__.py  augmentation.py  dataset.py  transform.py
src/models/: __init__.py  base.py  darknet.py  fcos.py  layers.py  losses.py  retinanet.py  ssd.py  ssd2.py  ssd300.py  ssd512.py  yolov3.py
src/utilities/: __init__.py  config.py  evaluator.py  load_config.py  optimizer.py  predictor.py  scheduler.py  schedulers.py
src/utils/: __init__.py  calculate_metrics.py  draw_bbox.py
tools/: convert_voc2coco.py  convert_voc2lxyxy.py  convert_voc2yolo.py
