[metadata]
name = object_detection
version = 1.0.0
url = https://github.com/rs1004/object_detection
author = Ryo S
license = MIT
description = object_detection: Personal Python package
long_description = file: README.md

[options]
packages = find:
package_dir =
    = src
install_requires =
    albumentations==0.5.2

[options.packages.find]
where = src